--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,5 +43,6 @@
             android:name="com.example.isolate.UserSettingActivity"
             android:label="@string/title_activity_main" >
         </activity>
+        <activity android:name="com.example.isolate.InstructionsActivity"></activity>
     </application>
 </manifest>
